android: Move js to new file

--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -2,86 +2,8 @@
 <html>
   <head>
     <title>Capture Photo</title>
-
     <script type="text/javascript" charset="utf-8" src="cordova-2.0.0.js"></script>
-    <script type="text/javascript" charset="utf-8">
-
-    var pictureSource;   // picture source
-    var destinationType; // sets the format of returned value 
-
-    // Wait for Cordova to connect with the device
-    //
-    document.addEventListener("deviceready",onDeviceReady,false);
-
-    // Cordova is ready to be used!
-    //
-    function onDeviceReady() {
-        pictureSource=navigator.camera.PictureSourceType;
-        destinationType=navigator.camera.DestinationType;
-    }
-
-    function changeStatus(status) {
-        var statusSpan = document.getElementById('status');
-        statusSpan.innerHTML = status;
-    }
-
-    // Called when a photo is successfully retrieved
-    //
-    function onPhotoSuccess(imageURI) {
-      showPhoto(imageURI);
-      uploadPhoto(imageURI);
-    }
-
-    function showPhoto(imageURI) {
-      var image = document.getElementById('Image');
-      image.style.display = 'block';
-      image.src = imageURI;
-    }
-
-    function uploadSuccess(r) {
-        console.log("Code = " + r.responseCode);
-        console.log("Response = " + r.response);
-        console.log("Sent = " + r.bytesSent);
-
-        changeStatus("Response code: " +  r.responseCode);
-    }
-
-    function uploadError(error) {
-        alert("An error has occurred: Code = " = error.code);
-
-    }
-
-    function uploadPhoto(imageURI) {
-        var options = new FileUploadOptions();
-        options.fileKey="media";
-        options.fileName="android.jpeg";
-        options.mimeType="image/jpeg";
-
-        var ft = new FileTransfer();
-
-        var statusSpan = document.getElementById('status');
-        changeStatus("Preparing to upload...");
-
-        ft.upload(imageURI, "http://thumbor.caricio.com/upload", uploadSuccess, uploadError, options);
-
-        changeStatus("Uploading...");
-    }
-
-    // A button will call this function
-    //
-    function capturePhoto() {
-      // Take picture using device camera and retrieve image as base64-encoded string
-      navigator.camera.getPicture(onPhotoSuccess, onFail, { quality: 2,
-      destinationType: destinationType.FILE_URI });
-    }
-
-    // Called if something bad happens.
-    // 
-    function onFail(message) {
-      alert('Failed because: ' + message);
-    }
-
-    </script>
+    <script type="text/javascript" charset="utf-8" src="insthumbor.js"></script>
   </head>
   <body>
     <h1>Insthumbor</h1>
