--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -6,13 +6,20 @@
     <script type="text/javascript" charset="utf-8" src="jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="insthumbor.js"></script>
     <script type="text/javascript" charset="utf-8" src="libthumbor.js"></script>
+		<link rel="stylesheet" href="css/insthumbor.css" type="text/css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div id="insthumbor">
-        <h1>Insthumbor</h1>
-        <span class="status-bar"></span>
-        <button class="picture-button">Capture Photo</button> <br>
+				<menu>
+        	<h1>Insthumbor</h1>
+				</menu>
+				
         <img style="display:none;" class="current-picture" src="" />
+
+        <span class="status-bar"></span>
+				<menu>
+        	<button class="picture-button">Capture Photo</button>
+				</menu>
     </div>
   </body>
 </html>
