--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Capture Photo</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <script type="text/javascript" charset="utf-8" src="cordova-2.0.0.js"></script>
     <script type="text/javascript" charset="utf-8" src="jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="insthumbor.js"></script>
