--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <span class="status-bar"></span>
-        <menu>
+        <menu class="footer-menu">
             <button class="picture-button">Capture Photo</button>
         </menu>
     </div>
