--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -12,24 +12,24 @@
   <body>
     <div id="insthumbor">
         <menu>
-            <button class="back-button">voltar</button>
+            <button style="display:none" class="back-button">voltar</button>
             <h1>Insthumbor</h1>
         </menu>
 
         <div class="screens">
-            <div class="wait-screen">
+            <div style="display:none" class="wait-screen">
                 <div class="box">
                     <img src="img/spinner.gif">
                     <h2>Estamos carregando sua foto. Aguarde...</h2>
                 </div>
             </div>
 
-            <div class="body">
-            <img class="current-picture" src="http://thumbor.caricio.com/unsafe/300x300/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg" />
+            <div style="display:none" class="body">
+            <img width="300" height="300" class="current-picture" src="http://thumbor.caricio.com/unsafe/300x300/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg" />
             </div>
         </div>
 
-        <div class="box-selection">
+        <div style="display:none" class="box-selection">
             <ul>
                 <li><a href="javascript:"><img src="http://thumbor.caricio.com/unsafe/60x60/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg"></a></li>
                 <li><a href="javascript:"><img src="http://thumbor.caricio.com/unsafe/60x60/filters:lomoize(0.6,2.3)/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg"></a></li>
@@ -39,7 +39,7 @@
             </ul>
         </div>
 
-        <span class="status-bar"></span>
+        <span style="display:none" class="status-bar"></span>
         <menu class="footer-menu">
             <button class="picture-button">Capture Photo</button>
         </menu>
