Final FISL version.

--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -37,6 +37,9 @@
                 <li><a href="javascript:"><img src="http://thumbor.caricio.com/unsafe/60x60/filters:contrast(40)/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg"></a></li>
                 <li><a href="javascript:"><img src="http://thumbor.caricio.com/unsafe/60x60/filters:sharpen(2,1.0,true)/www.aaa.uni-augsburg.de/incoming/internationale_alumni/fotos_und_downloads_aai/Mariana_Ivanova.jpeg"></a></li>
             </ul>
+            <div class="action-area">
+                <button class="send-button">Enviar foto</button>
+            </div>
         </div>
 
         <span style="display:none" class="status-bar"></span>
